[package]
name = "goga"
version = "0.1.0"
authors = ["Mario Idival <marioidival@gmail.com>"]

[dependencies]
sapper = { git = "https://github.com/sappworks/sapper.git", branch = "master" }
dbmigrate = { git = "https://github.com/Keats/dbmigrate.git", branch = "master" }
postgres = "*"
log = "*"
env_logger = "*"
serde = "*"
serde_json = "*"