[package]
name = "goga"
version = "0.1.0"
authors = ["Mario Idival <marioidival@gmail.com>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"
serde = "*"
serde_json = "1.0"
serde_derive = "*"
r2d2 = "^0.7"
r2d2_postgres = "0.13.0"

[dependencies.postgres]
version = "0.15.0"
features = ["with-serde_json"]

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]